--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ dependencies {
 	implementation 'dev.langchain4j:langchain4j-ollama:1.0.0-alpha1'
 	implementation 'dev.langchain4j:langchain4j-spring-boot-starter:1.0.0-alpha1'
 	implementation 'dev.langchain4j:langchain4j-embeddings-all-minilm-l6-v2:1.0.0-alpha1'
-
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'com.h2database:h2'
